--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="password">Password</string>
     <string name="xyz_gmail_com">xyz@gmail.com</string>
     <string name="email_address">Email Address</string>
+    <string name="create_post">Create Post</string>
 </resources>
