phone verification set

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="xyz_gmail_com">xyz@gmail.com</string>
     <string name="email_address">Email Address</string>
     <string name="create_post">Create Post</string>
+    <string name="phone_number">\tPhone Number</string>
 </resources>
